# express-boilerplate-ts

./: .env  .env.test  .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.rust-wasm  LICENSE  README.md  SECURITY.md  eslint.config.js  jest.config.ts  package-lock.json  package.json  swagger.json  tsconfig.json  tsoa.json
.husky/: prepare-commit-msg
keys/: privateKey.pem  publicKey.pem
rust-wasm-libs/: Cargo.toml
rust-wasm-libs/src/: lib.rs
src/: constants.ts  createSwaggerJson.ts  dotenv.ts  ensureDbCollectionsAndIndexes.ts  index.ts  swaggerComponents.ts  tsoa-specs.json  winston_logger.ts
src/__scripts__/: axiosInstance.ts  index.ts  scriptPopulateUsers.ts
src/__tests__/: globalSetup.ts  globalTeardown.ts
src/auth/: AuthInterface.ts  index.ts  jwt.ts  types.ts
src/cache/: AbstractAppCache.ts  AppCache.ts  CacheInterface.ts  index.ts  nodeCache.ts  redis.ts
src/configs/: swaggerConfig.json
src/controllers/: Docs.ts  Users.ts
src/db/: DbInterface.ts  encryptionConfig.ts  index.ts  indexingConfig.ts  mongo.ts
src/entities/: BaseEntity.ts  User.ts
src/errors/: ApiError.ts  EntityCollectionUndefinedError.ts  ValidationError.ts
src/middlewares/: authMiddleware.ts  responseMiddleware.ts  userProfilePicUploadMiddleware.ts
src/models/: User.ts
src/p_queue/: QueueInterface.ts  index.ts  redis.ts
src/responses/: failureResponse.ts  successResponse.ts
src/routes/: app.ts  index.ts  routes.ts
src/services/: Users.ts
src/types/: ApiFailureResponse.ts  ApiResponse.ts  (+7 more)
(+31 files in other folders)
